fixed broken radial knob on mobile

--- a/src/components/RadialControl/index.styl
+++ b/src/components/RadialControl/index.styl
@@ -9,6 +9,7 @@
     position absolute
     left calc(50% - 22px)
     top calc(50% - 22px)
+    touch-action none
 
     &-circle
       border-radius 100px
